--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Music Player Design -Easy Tutorials</title>
 <link rel="stylesheet" href="style.css">
+<script src="https://kit.fontawesome.com/ebee588bc6.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="container">
             <div class="music-player">
-            
-                
+                <nav>
+                    <div class="circle">
+                        <i class="fa-solid fa-angle-left"></i>
+                    </div>
+                    <div class="circle">
+                        <i class="fa-solid fa-bars"></i>
+                    </div>
+                </nav>
+<img src="media/468-thumbnail.png" class="song-img"> 
+            </h1>Despacito</h1>
+            <p>Luis Fonsi Ft.puerto Rica</p>
+</div>
+
+</body>
+</html>
+
+
         </div>
         </div>  
 
